--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,4 +1,10 @@
-FROM alpine:3.10
+FROM  python:3.8.16-alpine3.18
 
-RUN apk add --no-cache python3-dev \
-    && pip3 install --upgrade pip
+
+WORKDIR /app
+
+COPY . /app 
+
+RUN pip3 --no-cache-dir install -r requirements.txt
+
+CMD ["python3","run.py"]
