--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,14 @@ services:
       MYSQL_PASSWORD: tpdeu
       MYSQL_DATABASE: tpdeu  
   api:
-    image: blancofrancisco/backend_laboratorio2022
+    image: gastonnicora/deu_api
     restart: always
+    depends_on:
+      - db
     links:
       - db
     ports:
       - "8080:4000"
-      - "80:80"
   phpmyadmin:
     image: phpmyadmin
     restart: always
