--- a/CLI-WEB/package.json
+++ b/CLI-WEB/package.json
@@ -8,10 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
-    "vue-router": "^4.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
-    "vue": "^3.3.2"
+    "vue": "^3.3.2",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
