--- a/CLI-WEB/package.json
+++ b/CLI-WEB/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild/linux-x64": "^0.17.19",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
+    "package-lock": "^1.0.5",
+    "package.json": "^0.0.0",
     "vue": "^3.3.2",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
