--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        context: .
+        context: ../../SQL/
         file: ./Dockerfile
         tags: |
           gastonnicora/deu_db:${{ env.SOURCE_NAME }}
