--- a/SQL/Dockerfile
+++ b/SQL/Dockerfile
@@ -1,6 +1,4 @@
 FROM mariadb
-WORKDIR /app
 
-COPY . /app 
-COPY /app/script/ /docker-entrypoint-initdb.d/
+COPY /script/ /docker-entrypoint-initdb.d/
 
