cambios para prueba docker

--- a/SQL/Dockerfile
+++ b/SQL/Dockerfile
@@ -2,5 +2,5 @@ FROM mariadb
 WORKDIR /app
 
 COPY . /app 
-COPY /app/script/ /docker-entrypoint-initdb.d/
+COPY app/script/ /docker-entrypoint-initdb.d/
 
