cambios para prueba docker

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,9 +45,9 @@ jobs:
       with:
         push: true
         context: .
-        file: ./API/Dockerfile
+        file: ./SQL/Dockerfile
         tags: |
-          gastonnicora/deu_api:${{ env.SOURCE_NAME }}
+          gastonnicora/deu_db:${{ env.SOURCE_NAME }}
       env:
         SOURCE_NAME: ${{ steps.prepare_source.outputs.SOURCE_NAME }}
 
