--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /app
 
 COPY . /app 
 
-RUN pip3 --no-cache-dir install -r ./requirements.txt
+RUN pip3 --no-cache-dir install -r requirements.txt
 
 CMD ["python3","run.py"]
