--- a/CLI-WEB/Dockerfile
+++ b/CLI-WEB/Dockerfile
@@ -6,13 +6,13 @@ FROM node:9.11.1-alpine
 WORKDIR /app
 
 # copiar 'package.json' y 'package-lock.json' (si están disponibles)
-COPY package*.json ./
+COPY package*.json ./app
 
 # instalar dependencias del proyecto
 RUN npm install 
 
 # copiar los archivos y carpetas del proyecto al directorio de trabajo actual (es decir, la carpeta 'app')
-COPY . .
+COPY . ./app
 # instalar un simple servidor http para servir nuestro contenido estático
 RUN npm install  http-server
 
