--- a/.github/workflows/docker-push_web.yml
+++ b/.github/workflows/docker-push_web.yml
@@ -1,56 +1,35 @@
-name: Docker Image Build CI
 
-on:
-  # Trigger: cuando se actualicen las branchs o tags
-  push:
-    branches:
-    - "main"
-    - "release-*"
-    tags:
-    - "v*"
-  workflow_dispatch:
+name: CLI-WEB
 
+on: push
 jobs:
-  build:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-    # Step 1: Descarga el repositorio
-    - uses: actions/checkout@v2
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASS}}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: my-docker-hub-namespace/my-docker-hub-repository
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          push: true
+          context: .
+          file: ./CLI-WEB/Dockerfile
+          tags: |
+            gastonnicora/deu_web:latest
 
-    # Step 2: Identifica el nombre de la tag / branch de git
-    - name: "Prepare source name: Tag or branch name"
-      id: prepare_source
-      run: |
-        SOURCE_NAME="${GITHUB_REF#refs/*/}"
-        [ $SOURCE_NAME == "main" ] && SOURCE_NAME="latest"
-        echo ::set-output name=SOURCE_NAME::${SOURCE_NAME}
 
-    # Steps 3 y 4: Requisitos QEMU y Buildx
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    # Step 5: Autenticación en el registry
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASS }}
-
-     # Step 6: Construcción y publicación de la imagen
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        context: .
-        file: ./CLI-WEB/Dockerfile
-        tags: |
-          gastonnicora/deu_web:${{ env.SOURCE_NAME }}
-      env:
-        SOURCE_NAME: ${{ steps.prepare_source.outputs.SOURCE_NAME }}
-
-    # Step 7: Muestra el digest de la imagen
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+   
