--- a/CLI-WEB/Dockerfile
+++ b/CLI-WEB/Dockerfile
@@ -6,14 +6,12 @@ RUN npm install -g http-server
 # hacer la carpeta 'app' el directorio de trabajo actual
 WORKDIR /app
 
-# copiar 'package.json' y 'package-lock.json' (si están disponibles)
-COPY package*.json ./
+# copiar los archivos y carpetas del proyecto al directorio de trabajo actual (es decir, la carpeta 'app')
+COPY . ./app
+
 
 # instalar dependencias del proyecto
 RUN npm install
-
-# copiar los archivos y carpetas del proyecto al directorio de trabajo actual (es decir, la carpeta 'app')
-COPY . .
 
 # construir aplicación para producción minificada
 RUN npm run build
