--- a/CLI-WEB/.gitignore
+++ b/CLI-WEB/.gitignore
@@ -9,11 +9,11 @@ lerna-debug.log*
 
 node_modules
 .DS_Store
-dist
 dist-ssr
 coverage
 *.local
 
+.vscode
 /cypress/videos/
 /cypress/screenshots/
 
