--- a/CLI-WEB/Dockerfile
+++ b/CLI-WEB/Dockerfile
@@ -1,4 +1,4 @@
-FROM node
+FROM node:9.11.1-alpine
 
 # instalar un simple servidor http para servir nuestro contenido estático
 RUN npm install -g http-server
@@ -6,14 +6,16 @@ RUN npm install -g http-server
 # hacer la carpeta 'app' el directorio de trabajo actual
 WORKDIR /app
 
-# copiar los archivos y carpetas del proyecto al directorio de trabajo actual (es decir, la carpeta 'app')
-COPY ./CLI-WEB/ ./app
+# copiar 'package.json' y 'package-lock.json' (si están disponibles)
+COPY package*.json ./
 
-RUN cd ./app
-RUN ls -al
 # instalar dependencias del proyecto
 RUN npm install
 
+# copiar los archivos y carpetas del proyecto al directorio de trabajo actual (es decir, la carpeta 'app')
+COPY . .
+
+RUN ls -al
 # construir aplicación para producción minificada
 RUN npm run build
 
