--- a/CLI-WEB/Dockerfile
+++ b/CLI-WEB/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:9.11.1-alpine
+FROM node
 
 # instalar un simple servidor http para servir nuestro contenido estático
 RUN npm install -g http-server
