--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -3,7 +3,7 @@ FROM  python:3.8.16-alpine3.18
 
 WORKDIR /app
 
-COPY . /app 
+COPY ./API/ /app 
 
 RUN pip3 --no-cache-dir install -r ./API/requirements.txt
 
