--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -3,8 +3,8 @@ FROM  python:3.8.16-alpine3.18
 
 WORKDIR /app
 
-COPY ./API/ /app 
+COPY ./API/ . 
 
-RUN pip3 --no-cache-dir install -r ./API/requirements.txt
+RUN pip3 --no-cache-dir install -r requirements.txt
 
 CMD ["python3","./API/run.py"]
