--- a/CLI-WEB/package.json
+++ b/CLI-WEB/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "package-lock": "^1.0.5",
     "package.json": "^0.0.0",
     "vue": "^3.3.2",
