--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -6,5 +6,5 @@ WORKDIR /app
 COPY ./API/ . 
 
 RUN pip3 --no-cache-dir install -r requirements.txt
-
+RUN set environment="development"
 CMD ["python3","run.py"]
