--- a/CLI-WEB/nginx.conf
+++ b/CLI-WEB/nginx.conf
@@ -1,11 +1,10 @@
 server { 
-    listen 80;
-
-    location / {
-        index index.html;
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ $uri.html =404;
-    }
+    listen 80 default_server;
+ location / {
+   root /usr/share/nginx/html;
+   index index.html index.htm;
+   try_files $uri $uri/ /index.html =404;
+ }
 
     location /api/ {
         proxy_pass http://api/;
