--- a/CLI-WEB/nginx.conf
+++ b/CLI-WEB/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
  location / {
    root /usr/share/nginx/html;
-   index index.html index.htm;
+   index indexa.html indexa.htm;
    try_files $uri $uri/ /index.html =404;
  }
 
