--- a/CLI-WEB/Dockerfile
+++ b/CLI-WEB/Dockerfile
@@ -9,7 +9,7 @@ RUN npm run build
 
 # production stage
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=build-stage ./CLI-WEB/dist /usr/share/nginx/html
 COPY ./CLI-WEB/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 8080
 CMD ["nginx", "-g", "daemon off;"]
