--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     ports:
       - "80:8080"
   phpmyadmin:
-    image: phpmyadmin
+    image: phpmyadmin:5.2.1-fpm-alpine
     restart: always
     environment:
         PMA_HOST: db
