--- a/CLI-WEB/package.json
+++ b/CLI-WEB/package.json
@@ -23,7 +23,11 @@
     "vue-axios": "^3.5.2",
     "vue-loading-overlay": "6.0",
     "vue-router": "^4.2.2",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "express": "^4.19.2",
+    "path":"^0.12.7",
+    "http-proxy-middleware": "^3.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
